# cpp_builder_pattern_course_companion

./: .gitignore  CMakeLists.txt  README.md
examples/00_telescoping_constructor/: CMakeLists.txt  main.cc
examples/01_build_returns_product/: CMakeLists.txt  main.cc
examples/01_builder_setters/: CMakeLists.txt  main.cc
examples/02_build_returns_product/: CMakeLists.txt  main.cc
examples/02_fluent_chaining/: CMakeLists.txt  main.cc
examples/03_fluent_chaining/: CMakeLists.txt  main.cc
examples/03_smart_pointer_product/: CMakeLists.txt  main.cc
examples/04_private_ctor/: CMakeLists.txt  main.cc
examples/04_smart_pointer_product/: CMakeLists.txt  main.cc
examples/05_private_ctor/: CMakeLists.txt  main.cc
exercises/sandwich_shop/: CMakeLists.txt  README.md
exercises/sandwich_shop/include/: sandwich.h
exercises/sandwich_shop/solution/: main.cc  sandwich.h
exercises/sandwich_shop/src/: main.cc
exercises/sandwich_shop_solution/: CMakeLists.txt
exercises/sandwich_shop_solution/include/: sandwich.h
exercises/sandwich_shop_solution/src/: main.cc
